# UrbanMapper-Community

./: .bumpversion.toml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.fast.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: compile.yaml  docs.yml  test.yml
docs/: .dates_cache.jsonl  CONTRIBUTING_DEV.md  EXAMPLES.md  community-differences.md  community-hub.md  community-story.md  index.md
docs/api/: auctus.md  enrichers.md  filters.md  imputers.md  interactive_table_vis.md  jupyter_gis.md  loaders.md  pipeline_generators.md  pipelines.md  urban_layers.md  visualisers.md
docs/assets/audio/: um_chtrad.m4a  um_en.m4a  um_fr.m4a  um_sp.m4a
docs/copy_of_examples/1-Per-Module/: 6-visualiser.ipynb
docs/getting-started/: installation.md  overview.md  quick-start_pipeline.md  quick-start_step_by_step.md
docs/javascripts/: mathjax.js
docs/private/custom_css/: extra.css
docs/stylesheets/: extra.css
docs/theme/overrides/: home.html
examples/1-Per-Module/: 2-urban_layer.ipynb
src/urban_mapper/: __init__.py
src/urban_mapper/config/: optional_dependencies.py
src/urban_mapper/mixins/: jupyter_gis.py
src/urban_mapper/modules/: __init__.py
src/urban_mapper/modules/enricher/aggregator/aggregators/: simple_aggregator.py
src/urban_mapper/modules/enricher/enrichers/: single_aggregator_enricher.py
src/urban_mapper/modules/pipeline_generator/: instructions.txt
src/urban_mapper/modules/urban_layer/: __init__.py  urban_layer_factory.py
src/urban_mapper/modules/urban_layer/urban_layers/: __init__.py  tile2net_crosswalks.py  tile2net_sidewalks.py  uber_h3.py
src/urban_mapper/modules/visualiser/: __init__.py  visualiser_factory.py
src/urban_mapper/modules/visualiser/visualisers/: __init__.py
src/urban_mapper/modules/visualiser/visualisers/geopandas/: __init__.py  interactive_visualiser.py  static_visualiser.py
src/urban_mapper/modules/visualiser/visualisers/lonboard/: __init__.py  base.py  classic.py  heatmap.py
src/urban_mapper/pipeline/: pipeline.py
test/urban_mapper/modules/urban_layer/: test_urban_layer_factory.py
test/urban_mapper/modules/urban_layer/urban_layer/: test_uber_h3_layer.py
test/urban_mapper/modules/visualiser/: test_visualisers.py
